iliketoquote.com (archived on 2014-02-14)
{
  "alexa_rank": 186994,
  "analysis_subcorpus": true,
  "categories": "business;education;entertainment",
  "char_count": 2585,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.48,
  "homepage_snapshot_redirected_domain": "iliketoquote.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140330021254id_/http://www.iliketoquote.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140330021254id_/http%3A//iliketoquote.com",
  "interval": "2014_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "iliketoquote.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214201715id_/http%3A//www.iliketoquote.com/privacy.php",
  "policy_title": "Quotes, Sayings and Quote Images for you to share from iLikeToQuote",
  "policy_url": "iliketoquote.com/privacy.php",
  "sha1": "1eccee4bc55d7f74e29d3d736741fe53ac0027ca",
  "simhash": 3788891342489559894,
  "simhash_updated": false,
  "site_hostname": "iliketoquote.com",
  "site_url": "http://iliketoquote.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20140214201715",
  "word_count": 418,
  "year": 2014
}

--- a/i/il/ili/iliketoquote.com.html
+++ b/i/il/ili/iliketoquote.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the iliketoquote.com privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810104808id_/http%3A//www.iliketoquote.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iliketoquote.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214201715id_/http%3A//www.iliketoquote.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
-        <title>iLiketoquote - Facebook Quotes, Love Quotes, Status Quotes, Funny Quotes, Life Quotes</title><link rel="canonical" href="http://www.iliketoquote.com/"><meta property="og:title" content="I Like to Quote"><meta property="og:description" content="The best collection of quotes and sayings for every situation in life."><meta property="og:url" content="http://www.iliketoquote.com"><meta property="og:image" content="http://www.iliketoquote.com/img/873.jpg"><meta property="og:type" content="website">        <meta property="fb:app_id" content="435043786565307">
+        <title>Quotes, Sayings and Quote Images for you to share from iLikeToQuote</title><meta name="description" content="The best quotes, sayings and quote images. Share our inspirational, funny and famous quotes on Tumblr, Pinterest, Facebook and everywhere!"><link rel="canonical" href="http://www.iliketoquote.com/"><meta property="og:title" content="I Like to Quote"><meta property="og:description" content="The best quotes, sayings and quote images! Share our collection of inspirational and famous quotes."><meta property="og:url" content="http://www.iliketoquote.com/"><meta property="og:image" content="http://www.iliketoquote.com/img/873.jpg"><meta property="og:type" content="website">        <meta property="fb:app_id" content="435043786565307">
+        <meta name="robots" content="index, follow">
         <link rel="stylesheet" href="http://www.iliketoquote.com/theme/styles.css">
         <link rel="stylesheet" href="http://www.iliketoquote.com/theme/reveal.css">
-        <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=435043786565307"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script src="http://www.iliketoquote.com/theme/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=435043786565307"></script><script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="http://www.iliketoquote.com/theme/jquery-1.8.2.min.js"></script>
         <script src="http://www.iliketoquote.com/theme/scrolltofixed/jquery-scrolltofixed-min.js"></script>
         <script src="http://www.iliketoquote.com/theme/jquery.idTabs.min.js"></script>
         <script src="http://www.iliketoquote.com/theme/jquery.reveal.js"></script>
@@ -19,7 +20,7 @@
 <body>
         <div class="header">
                 <div class="wrapper">
-                        <a href="http://www.iliketoquote.com"><img src="http://www.iliketoquote.com/theme/logo.png" alt="iLiketoquote.com"></a>
+                        <a href="http://www.iliketoquote.com/"><img src="http://www.iliketoquote.com/theme/logo.png" alt="iLiketoquote.com"></a>
                         <form id="searchBox" action="http://www.iliketoquote.com/search/">
                                 <input id="search" name="s" type="text">
                                 <input id="submit" name="submit" type="image" src="http://www.iliketoquote.com/theme/search-button.png">
@@ -77,11 +78,40 @@ If you wish to disable cookies, you may do so through your individual browser op
 </div>
 <div id="right">
         <div class="sidebarShare">
-                <iframe id="facebook-like" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Filiketoquote&amp;send=false&amp;layout=button_count&amp;width=78&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:78px; height:21px;" allowtransparency="true"></iframe>
-                <div id="google-plusone"><div class="g-plusone" data-size="medium" data-href="http://www.iliketoquote.com"></div></div>
-                <div id="twitter-follow"><a href="https://twitter.com/iliketoquote" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @iliketoquote</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
-                <div id="stumble-upon"><su:badge layout="1"></su:badge></div>
+                <iframe id="facebook-like" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Filiketoquote&amp;send=false&amp;layout=button_count&amp;width=85&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowtransparency="true"></iframe>
+                <div id="google-plusone">
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-size="medium"></div>
+
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+</div>
+   
+<div id="twitter-follow">
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="Great Quotes" data-via="missdolliecrave">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></div>
+ 
+ <div id="stumble-upon">
+<!-- Place this tag where you want the su badge to render -->
+<su:badge layout="1"></su:badge>
+
+<!-- Place this snippet wherever appropriate -->
+<script type="text/javascript">
+  (function() {
+    var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
+    li.src = ('https:' == document.location.protocol ? 'https:' : 'http:') + '//platform.stumbleupon.com/1/widgets.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
+  })();
+</script>
+</div>    
+
+    
         </div>
 
         <div class="advertisements">Advertisements</div>
@@ -98,9 +128,9 @@ google_ad_height = 250;
 </script>
         </div>
 
-        <div class="most-popular-images">Most popular images</div>
+        <div class="most-popular-images">Other Popular Quotes</div>
         <div class="most-popular-thumbs">
-                <a href="http://www.iliketoquote.com/i-dont-have-insomnia-i-have-internet-connection/"><img src="http://www.iliketoquote.com/img/thumb1803.jpg" alt="I don't have insomnia, I have internet connection." width="120" height="90"></a><a href="http://www.iliketoquote.com/dont-worry-because-it-happened-smile-because-its-over/"><img src="http://www.iliketoquote.com/img/thumb2171.jpg" alt="Don't worry because it happened. Smile because it's over." width="120" height="90"></a><a href="http://www.iliketoquote.com/dear-suicidal-teens-suicide-is-a-permanent-solution-to-a-temporary-problem-sincerely-you-have-so-much-to-look-forward-to-in-life/"><img src="http://www.iliketoquote.com/img/thumb1368.jpg" alt="Dear suicidal teens, suicide is a permanent solution to a temporary problem. Sincerely, you have so much to look forward to in life." width="120" height="90"></a><a href="http://www.iliketoquote.com/sometimes-i-love-you-sometimes-i-hate-you-but-there-isnt-a-day-that-goes-by-that-i-dont-miss-you/"><img src="http://www.iliketoquote.com/img/thumb2301.jpg" alt="Sometimes I love you, sometimes I hate you, but there isn't a day that goes by that I don't miss you." width="120" height="90"></a><a href="http://www.iliketoquote.com/the-key-to-happiness-is-to-always-have-control-over-your-emotions/"><img src="http://www.iliketoquote.com/img/thumb1074.jpg" alt="The key to happiness is to always have control over your emotions." width="120" height="90"></a><a href="http://www.iliketoquote.com/im-not-looking-for-something-perfect-i-want-something-real-something-between-the-two-of-us-something-we-both-feel/"><img src="http://www.iliketoquote.com/img/thumb1525.jpg" alt="I'm not looking for something perfect, I want something real. Something between the two of us, something we both feel." width="120" height="90"></a>        </div>
+                <a href="http://www.iliketoquote.com/the-brightest-future-will-always-be-based-on-a-forgotten-past-you-cant-go-on-well-in-life-until-you-let-go-of-your-past-failures-and-heartaches/"><img src="http://www.iliketoquote.com/img/thumb1704.jpg" alt="The brightest future will always be based on a forgotten past, you can't go on well in life until you let go of your past failures and heartaches." width="120" height="90"></a><a href="http://www.iliketoquote.com/if-its-true-that-we-are-here-to-help-others-then-what-exactly-are-the-others-here-for/"><img src="http://www.iliketoquote.com/img/thumb2522.jpg" alt="If it's true that we are here to help others, then what exactly are the others here for?" width="120" height="90"></a><a href="http://www.iliketoquote.com/dont-always-go-for-the-guys-who-can-sweep-you-off-your-feet-they-can-drop-you-on-your-ass-just-as-fast/"><img src="http://www.iliketoquote.com/img/thumb1917.jpg" alt="Don't always go for the guys who can sweep you off your feet. They can drop you on your ass just as fast." width="120" height="90"></a><a href="http://www.iliketoquote.com/everyone-makes-mistakes-but-admit-your-own-before-you-point-out-someone-elses/"><img src="http://www.iliketoquote.com/img/thumb1436.jpg" alt="Everyone makes mistakes, but admit your own before you point out someone else's." width="120" height="90"></a><a href="http://www.iliketoquote.com/being-single-is-not-necessarily-a-bad-thing-it-is-much-better-than-being-in-an-unhealthy-relationship-with-the-wrong-person/"><img src="http://www.iliketoquote.com/img/thumb1319.jpg" alt="Being single is not necessarily a bad thing. It is much better than being in an unhealthy relationship with the wrong person." width="120" height="90"></a><a href="http://www.iliketoquote.com/friends-come-and-go-so-does-a-best-friend-but-best-friends-will-always-find-their-way-back/"><img src="http://www.iliketoquote.com/img/thumb2343.jpg" alt="Friends come and go, so does a best friend. But best friends will always find their way back." width="120" height="90"></a>        </div>
 
         <div id="scrolling">
                 <div class="advertisements">Advertisements</div>
@@ -126,7 +156,7 @@ google_ad_height = 250;
         </div>
         <div class="footer">
                                 <div class="wrapper">
-                        <a href="http://www.iliketoquote.com/fast/women-worry-about-the-things-that-men-forget-men-worry-about-the-things-that-women-remember/">View faster</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/terms-of-use.php">Terms</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/privacy.php">Privacy</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/contact-us.php" rel="nofollow">Contact</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <b><a href="http://www.freeonlineusers.com"><script type="text/javascript" src="http://st1.freeonlineusers.com/on1.php?id=590375"> </script>&nbsp;Online</a></b> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.dolliecrave.com" target="_blank" title="Tumblr Themes">Tumblr Themes</a> <img src="http://www.iliketoquote.com/theme/footer_line.png">© All images are copyrighted by their authors.
+                        <a href="http://www.iliketoquote.com/fast/dear-girls-every-calorie-is-not-a-war-you-are-beautiful-no-matter-what-you-eat/">View faster</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/terms-of-use.php">Terms</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/privacy.php">Privacy</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.iliketoquote.com/contact-us.php" rel="nofollow">Contact</a> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <b><a href="http://www.freeonlineusers.com"><script type="text/javascript" src="http://st1.freeonlineusers.com/on1.php?id=590375"> </script>&nbsp;Online</a></b> <img src="http://www.iliketoquote.com/theme/footer_line.png"> <a href="http://www.dolliecrave.com" target="_blank" title="Tumblr Themes">Tumblr Themes</a> <img src="http://www.iliketoquote.com/theme/footer_line.png">© All images are copyrighted by their authors.
                 <div class="wrapper">
         </div>
 
@@ -157,7 +187,6 @@ google_ad_height = 250;
   })();
 </script>
 
-<script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
 
 <script type="text/javascript">
 
