--- a/a/au/auf/aufreeads.com.html
+++ b/a/au/auf/aufreeads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aufreeads.com privacy policy that was archived on 2013-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131208074026id_/http%3A//www.aufreeads.com/info/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aufreeads.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214202605id_/http%3A//www.aufreeads.com/info/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,7 +7,7 @@
 <meta name="description" content="AUFreeAds.com - Privacy Policy">
 <meta name="keywords" content="AUFreeAds.com - Privacy Policy">
 <meta name="owner" content="AUFreeAds.com">
-<meta name="copyright" content="2013 © AUFreeAds.com">
+<meta name="copyright" content="2014 © AUFreeAds.com">
 <meta name="robots" content="INDEX,FOLLOW">
 <link rel="stylesheet" type="text/css" href="/domain_static/aufreeads/css/common.css">
 </head>
@@ -154,7 +154,7 @@ Owned and Operated by USNetAds LLC
 <div class="ssSiteLocGuide"><a href="/" style="font-weight:bold" title="Go Back to AUFreeAds.com Home Page">AUFreeAds</a> &gt; Privacy Policy</div>
 
 <div class="ssBottomMenu">
-<div class="ssBottomMenuLeft">&nbsp;© 2013 AUFreeAds.com</div>
+<div class="ssBottomMenuLeft">&nbsp;© 2014 AUFreeAds.com</div>
 <div class="ssBottomMenuRight">
 	<a href="/info/faq.php">FAQ</a> |
 	<a href="/info/agreement.php">User Agreement</a> |
@@ -165,7 +165,7 @@ Owned and Operated by USNetAds LLC
 
 
 <div class="ssBottomCR">
-	<a href="http://www.usnetads.com/" target="_blank">USFreeAds</a> | <a href="http://www.getjob.us/" target="_blank">Free Job Postings</a> | <a href="http://www.canetads.com/" target="_blank">Canada Free Classifieds</a> | <a href="http://www.ukadslist.com/" target="_blank">UK Classifieds</a> | <a href="http://www.innetads.com/" target="_blank">India Free Classifieds</a> | <a href="http://www.cnnetads.com/" target="_blank">CNNetAds</a> | <a href="http://www.ukfreeads.ws/" target="_blank">UKFreeAds</a> | <a href="http://www.hot-web-ads.com/" target="_blank">Free Online Advertising</a>
+	<a href="http://www.usnetads.com/" target="_blank">US Free Classifieds</a> | <a href="http://www.getjob.us/" target="_blank">Online Job Search</a> | <a href="http://www.canetads.com/" target="_blank">Canada Classifieds</a> | <a href="http://www.ukadslist.com/" target="_blank">UK Classifieds</a> | <a href="http://www.innetads.com/" target="_blank">India Free Classifieds</a> | <a href="http://www.cnnetads.com/" target="_blank">CNNetAds</a> | <a href="http://www.ukfreeads.ws/" target="_blank">UKFreeAds</a> | <a href="http://www.hot-web-ads.com/" target="_blank">Free Online Advertising</a>
 </div>
 
 <br></div></div>
