--- a/m/ma/mai/mailboxforwarding.com.html
+++ b/m/ma/mai/mailboxforwarding.com.html
@@ -1,17 +1,15 @@
-<!--The following is the downloaded HTML source of the mailboxforwarding.com privacy policy that was archived on 2013-09-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130913214512id_/http%3A//www.mailboxforwarding.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mailboxforwarding.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214203819id_/http%3A//www.mailboxforwarding.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Mailbox Forwarding - View Postal Mail Online, Mail Forwarding, Post Office Box, and Virtual Address PO Box Services</title>
+<title>Mailbox Forwarding - View Postal Mail Online, Mail Forwarding, Mailbox Rental, and Virtual Office PO Box Services</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="keywords" content="mail forwarding,po box,post office box,mailbox services,mailbox rental,virtual address,mailbox address,virtual office">
-<meta name="description" content="We scan your mail so you can view it online. Rent a remote mailbox address and manage, scan, and forward all of your postal mail online. PO box and mail forwarding services.">
+<meta name="description" content="Mailbox Forwarding scans your mail for you to view online. Our remote mailbox rental service allows you to manage, scan, and forward all of your postal mail online. PO box and mail forwarding virtual office services.">
 <meta name="robots" content="index,follow">
 <meta name="revisit-after" content="2 days">
-<meta name="copyright" content="Copyright 2013 Mailbox Forwarding. All rights reserved.">
+<meta name="copyright" content="Copyright 2014 Mailbox Forwarding. All rights reserved.">
 <link href="favicon.ico" rel="SHORTCUT ICON">
-<link href="style.css" rel="stylesheet" type="text/css">
-
 <script language="javascript">
 <!--
 var pre1 = new Image();
@@ -32,53 +30,39 @@ var pre8 = new Image();
 pre7.src = "images/btlearnmore2.gif"
 var pre9 = new Image();
 pre9.src = "images/btsignup2.gif"
+var pre10 = new Image();
+pre10.src = "images/btnext2.gif"
 //-->
-</script>
-
+</script><link href="style.css" rel="stylesheet" type="text/css">
 </head>
-
-<body bottommargin="0" leftmargin="0" rightmargin="0" topmargin="0" marginheight="0" marginwidth="0" style="background: #FFFFFF url(images/bgtop.gif) repeat-x;">
+<body bottommargin="0" leftmargin="0" rightmargin="0" topmargin="0" marginheight="0" marginwidth="0" style="background:#FFFFFF url(images/bgtop.gif) repeat-x;">
 <table align="center" cellspacing="0" cellpadding="0" width="800" border="0">
-
-
-
-
 <tbody><tr width="800" height="80" style="background: url(images/logo.gif);">
 <td colspan="3">
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr width="800" height="80">
-
 <td width="1" height="80"><img src="images/spacer.gif" width="1" height="80"></td>
-
 <td width="799" height="80" align="right" valign="top">
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-
 <form name="login" method="post" action="https://www.mailboxforwarding.com/manage/login.php"></form>
 <input type="hidden" name="action" value="login">
 <td><img src="images/login1.gif"></td>
-<td style="background: url(images/login2.gif) repeat-x;"><input name="email" id="email" type="text" class="login" size="12" value="email" onfocus="if (document.login.email.value=='email') {document.getElementById('email').value = '';}"></td>
+<td style="background: url(images/login2.gif) repeat-x;"><input name="email" id="email" type="text" class="login" size="12" value="email" onfocus="if (document.login.email.value=='email') {document.getElementById('email').value='';}"></td>
 <td><img src="images/login3.gif"></td>
-<td style="background: url(images/login2.gif) repeat-x;"><input name="password" id="password" type="password" class="login" size="12" value="password" onfocus="if (document.login.password.value=='password') {document.getElementById('password').value = '';}"></td>
+<td style="background: url(images/login2.gif) repeat-x;"><input name="password" id="password" type="password" class="login" size="12" value="password" onfocus="if (document.login.password.value=='password') {document.getElementById('password').value='';}"></td>
 <td><img src="images/login4.gif"></td>
-<td><input name="loginsubmit" type="image" src="images/login5.gif" border="0" onclick="document.login.submit();" alt="Login"></td>
+<td><input name="loginsubmit" type="image" src="images/login5.gif" border="0" onclick="document.login.submit();return true;" alt="Login"></td>
 <td><img src="images/login6.gif"></td>
 
-
-</tr>
-</tbody></table>
-</td>
-
 </tr>
 </tbody></table>
 </td>
 </tr>
-
-
-
-<tr width="800" height="20">
+</tbody></table>
+</td>
+</tr><tr width="800" height="20">
 <td colspan="3">
-
 <table align="left" cellspacing="0" cellpadding="0" width="800" height="20" border="0">
 <tbody><tr height="20">
 <td width="121"><a href="index.php" onmouseout="index.src='images/button11.gif'" onmouseover="index.src='images/button21.gif'"><img src="images/button11.gif" name="index" border="0" alt="Home"></a></td>
@@ -90,15 +74,10 @@ pre9.src = "images/btsignup2.gif"
 <td width="74"><img src="images/button47.gif" width="74" height="20"></td>
 </tr>
 </tbody></table>
-
 </td>
 </tr>
-
-
-
 <tr width="800" height="28">
 <td colspan="3">
-
 <table align="left" cellspacing="0" cellpadding="0" width="800" border="0">
 <tbody><tr>
 <td width="121"><img src="images/spacer.gif" width="121" height="28"></td>
@@ -110,15 +89,11 @@ pre9.src = "images/btsignup2.gif"
 <td width="74"><img src="images/spacer.gif"></td>
 </tr>
 </tbody></table>
-
 </td>
 </tr>
 
-
-
 <tr>
 <td width="590" valign="top">
-
 <h1>Privacy Policy</h1>
 
 <p>Mailbox Forwarding will periodically review its privacy policy and reserves the right, at its discretion, to modify or remove portions of this policy at any time. Mailbox Forwarding considers the responsible use of personal information to be of vital importance. Mailbox Forwarding is committed to ensuring that to the best of our ability we meet all the requirements of the National Privacy Principals and the Privacy Act.</p>
@@ -137,38 +112,24 @@ pre9.src = "images/btsignup2.gif"
 <p>By signing up for an account with Mailbox Forwarding, you consent to receiving email communications from us. These emails may include notices regarding your account (new mail items received, shipment sent, etc.) and other information related to our services, as well as periodic updates on new developments in our service or technology.</p>
 
 <p><b>Form 1583</b></p>
-
 <p>In regard to <a href="form1583.php" target="_blank">USPS Form 1583</a>, which you must fill out by law after signing up for an account with Mailbox Forwarding, the USPS has enacted the following act:</p>
 <blockquote><p>Your information will be used to authorize the delivery of your mail to the designated addressee as your agent. Collection is authorized by 39 USC 401, 403, and 404. Providing the information is voluntary, but if not provided, we cannot provide this service to you. We do not disclose your information without your consent to third parties, except for the following limited circumstances: to a congressional office on your behalf; to financial entities regarding financial transaction issues; to a USPS® auditor; to entities, including law enforcement, as required by law or in legal proceedings; to contractors and other entities aiding us to fulfill the service; and for the purpose of identifying an address as an address of an agent who receives mail on behalf of other persons. Information concerning an individual who has filed an appropriate protective court order with the postmaster will not be disclosed except pursuant to court order. For more information on our privacy policies, see our privacy link on usps.com®.</p></blockquote>
 
 <p><b>Contact Us</b></p>
-
 <p>If you have further questions that this Privacy Policy did not address, please <a href="support/index.php?a=add">contact us</a>.</p>
-
 <br><br>
 
 </td>
 
-
-
-
 <td width="10" valign="top">
 <img src="images/spacer.gif" width="10">
 </td>
-
-
-
-
 <td width="200" valign="top">
-
 <table class="boxes" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td class="box1" valign="top">
-
 <h3 align="left">Mailbox Features</h3>
-
 <table cellspacing="0" cellpadding="0" border="0" summary="Mailbox Forwarding Features">
-
 <tbody><tr valign="middle">
 <td align="center"><a href="features.php#online"><img src="images/icononline2.gif" border="0"><p style="font-size:11px;">Access Mail Online</p></a></td>
 <td align="center"><a href="features.php#scan"><img src="images/iconscan2.gif" border="0"><p style="font-size:11px;">Secure Mail Scanning</p></a></td>
@@ -182,39 +143,24 @@ pre9.src = "images/btsignup2.gif"
 <td align="center"><a href="address.php"><img src="images/iconaddress2.gif" border="0"><p style="font-size:11px;">Real Street Addresses</p></a></td>
 <td align="center"><a href="security.php"><img src="images/iconsecurity2.gif" border="0"><p style="font-size:11px;">Privacy and Security</p></a></td>
 </tr>
-
 </tbody></table>
-
 </td>
 </tr>
 <tr><td class="box2" align="right" valign="middle"><a href="features.php" onmouseout="learnmore.src='images/btlearnmore1.gif'" onmouseover="learnmore.src='images/btlearnmore2.gif'"><img src="images/btlearnmore1.gif" name="learnmore" style="margin: 5px;" border="0" alt="Learn More"></a></td></tr>
 </tbody></table>
-
 <img src="images/spacer.gif" width="200" height="8">
-
 <table class="boxes" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td class="box1" valign="top">
-
-<h3 align="left">
-First Month Free</h3>
-
-<p>
-Enter the promotional code <b>"freemonth"</b> during checkout</p>
-
+<h3 align="left">First Month Free</h3>
+<p>Enter the promotional code <b>"freemonth"</b> during checkout"</p>
 </td>
 </tr>
 <tr><td class="box2" align="right" valign="middle"><a href="https://www.mailboxforwarding.com/signup.php" onmouseout="signup.src='images/btsignup1.gif'" onmouseover="signup.src='images/btsignup2.gif'"><img src="images/btsignup1.gif" name="signup" style="margin: 5px;" border="0" alt="Sign Up"></a></td></tr>
 </tbody></table>
-
 <br><br>
-
 </td>
 </tr>
-
-
-
-
 <tr>
 <td colspan="3">
 <div class="footer">
@@ -227,16 +173,11 @@ Enter the promotional code <b>"freemonth"</b> during checkout</p>
 <a href="privacy.php">Privacy Policy</a>
 <a href="support/index.php?a=add">Contact Us</a>
 </p>
-<p>© 2013 Mailbox Forwarding. All rights reserved.</p>
+<p>© 2014 Mailbox Forwarding. All rights reserved.</p>
 </div>
 </td>
 </tr>
-
-
-
-
 </tbody></table>
-
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -246,6 +187,5 @@ try {
 var pageTracker = _gat._getTracker("UA-10983517-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-
 
 </body></html>
