--- a/a/an/anh/anhosting.com.html
+++ b/a/an/anh/anhosting.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the anhosting.com privacy policy that was archived on 2013-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130424063211id_/http%3A//www.anhosting.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the anhosting.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214204349id_/http%3A//www.anhosting.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" itemscope="" itemtype="http://schema.org/Organization"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -98,7 +98,7 @@ var _vis_opt_protocol = (('https:' == document.location.protocol) ? 'https://' :
 document.write('<s' + 'cript src="' + _vis_opt_protocol + 
 'dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&a='+_vis_opt_account_id+'&url='
 +encodeURIComponent(document.URL)+'&random='+Math.random()+'" type="text/javascript">' + '<\/s' + 'cript>');
-</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=11970&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130424063211id_%2Fhttp%253A%2F%2Fwww.anhosting.com%2Fprivacy.php&amp;random=0.16767528111196217" type="text/javascript"></script>
+</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=11970&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140214204349id_%2Fhttp%253A%2F%2Fwww.anhosting.com%2Fprivacy.php&amp;random=0.5846515651358852" type="text/javascript"></script>
 
 <script type="text/javascript">
 if(typeof(_vis_opt_settings_loaded) == "boolean") { document.write('<s' + 'cript src="' + _vis_opt_protocol + 
@@ -340,7 +340,7 @@ Providence, UT 84332</strong>
             <li class="last"><h3><a href="/protect-your-brand.php" title="Protect Your Brand" target="_blank">Protect Your Brand</a></h3></li>
         </ul>
          
-        <p id="copy">© 2001 - 2011 Hosting Services, Inc. Part of the <a href="http://www.uk2group.com" title="UK2group.com" target="_blank">UK2 Group</a>.</p>
+        <p id="copy">© 2001 - 2014 Hosting Services, Inc. Part of the <a href="http://www.uk2group.com" title="UK2group.com" target="_blank">UK2 Group</a>.</p>
         <a href="http://twitter.com/anhosting" title="Anhosting Twitter">
 <img style="width:22px; height: 22px;" alt="Anhosting Twitter" src="/images/icon-social-twitter.png"></a>
 <a href="http://www.facebook.com/anhosting" title="Anhosting Facebook">
@@ -354,7 +354,7 @@ Providence, UT 84332</strong>
  
  <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=anhosting.com','SiteLock','width=600,height=600,left=160,top=170');"><img alt="website security" title="SiteLock" src="//shield.sitelock.com/shield/anhosting.com"></a>
  
-  <script type="text/javascript" src="//privacy-policy.truste.com/privacy-seal/UK2Group/asc?rid=791356ae-5e24-4ab6-bab1-c62b031f40f9"></script><a href="//privacy.truste.com/privacy-seal/UK2Group/validation?rid=a85ded6c-3780-4695-9672-9173f84d957e" title="TRUSTe online privacy certification" target="_blank"><img style="border: none" src="//privacy-policy.truste.com/privacy-seal/UK2Group/seal?rid=a85ded6c-3780-4695-9672-9173f84d957e" alt="TRUSTe online privacy certification"></a>
+  <!--<script type="text/javascript" src="//privacy-policy.truste.com/privacy-seal/UK2Group/asc?rid=791356ae-5e24-4ab6-bab1-c62b031f40f9"></script><a href="//privacy.truste.com/privacy-seal/UK2Group/validation?rid=a85ded6c-3780-4695-9672-9173f84d957e" title="TRUSTe online privacy certification" target="_blank"><img style="border: none" src="//privacy-policy.truste.com/privacy-seal/UK2Group/seal?rid=a85ded6c-3780-4695-9672-9173f84d957e" alt="TRUSTe online privacy certification"/></a>-->
  
   <a target="_blank" href="http://www.bbb.org/utah/business-reviews/internet-web-hosting-companies/hosting-services-in-providence-ut-4001573#bbblogo" title="Hosting Services, Inc. is a BBB Accredited Internet - Web Hosting Company in Providence, UT" style="display: block;position: relative;overflow: hidden; width: 150px; height: 57px; margin: 0px; padding: 0px;"><img style="padding: 0px; border: none;" id="bbblinkimg" src="https://seal-utah.bbb.org/logo/sehzbum/hosting-services-4001573.png" width="300" height="57" alt="Hosting Services, Inc. is a BBB Accredited Internet - Web Hosting Company in Providence, UT"></a><script type="text/javascript">var bbbprotocol = ( ("https:" == document.location.protocol) ? "https://" : "http://" ); document.write(unescape("%3Cscript src='" + bbbprotocol + 'seal-utah.bbb.org' + unescape('%2Flogo%2Fhosting-services-4001573.js') + "' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://seal-utah.bbb.org/logo/hosting-services-4001573.js" type="text/javascript"></script>
   
@@ -433,5 +433,13 @@ a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0
 a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>
 <!-- end crazy egg -->
+
+<!-- Dotmailer tracking code -->
+<script src="https://t.trackedlink.net/_dmpt.js" type="text/javascript"></script>
+<script type="text/javascript">
+_dmSetDomain("anhosting.com");
+</script>
+<!-- /Dotmailer tracking code -->
+
 
 </body></html>
