--- a/d/do/dow/downloadplex.com.html
+++ b/d/do/dow/downloadplex.com.html
@@ -1,17 +1,17 @@
-<!--The following is the downloaded HTML source of the downloadplex.com privacy policy that was archived on 2013-08-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130807084339id_/http%3A//www.downloadplex.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downloadplex.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214214143id_/http%3A//www.downloadplex.com/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="EN">
-  <meta name="keywords" content="Privacy Policy Downloadplex.com free software downloads, freeware, shareware, drivers, linux, mac, windows, mobile, scripts">
-<meta name="description" content="Privacy Policy Downloadplex.com Free software downloads at DownloadPlex.com, the most comprehensive source for free-to-try software downloads on the Web including Windows, Drivers, Linux, Mac and Mobile">
+  <meta name="keywords" content="Privacy Policy  free software downloads, freeware, shareware, drivers, linux, mac, windows, mobile, scripts">
+<meta name="description" content="Privacy Policy  Free software downloads at DownloadPlex.com, the most comprehensive source for free-to-try software downloads on the Web including Windows, Drivers, Linux, Mac and Mobile">
 <meta name="verify-v1" content="79q8io0Gib0++qPwx84eATfYTvQ+C6iA8zJXa2AVBW0=">
 <meta name="y_key" content="8a7604f09bf69a2f">
 <meta name="msvalidate.01" content="DB499C50F1E4420CA53E8156A4BE85AA">
 <link rel="search" type="application/opensearchdescription+xml" href="http://cdn.dwonloadplex.com/DownloadPlex_Search_Plugin.xml" title="DownloadPlex.com Search Plugin">
-<title>Privacy Policy Downloadplex.com</title>
-<link rel="alternate" type="application/rss+xml" title="Privacy Policy Downloadplex.com New Releases" href="http://www.downloadplex.com/rss.xml">
+<title>Privacy Policy </title>
+<link rel="alternate" type="application/rss+xml" title="Privacy Policy  New Releases" href="http://www.downloadplex.com/rss.xml">
 
 <link href="http://cdn.downloadplex.com/img/favicon.ico" type="image/x-icon" rel="shortcut icon">
 <link href="http://cdn.downloadplex.com/css/main.min.v1.2.10.gz.css" rel="stylesheet" type="text/css">
@@ -90,7 +90,8 @@ googletag.enableServices();
             <div class="clr"></div>	
             </div>            
 <div id="headercontent">
-<h1 class="logo"><a href="http://www.downloadplex.com" title="DownloadPlex.com Homepage"><span>DownloadPlex.com Homepage</span></a></h1> 
+<!-- <h1 class="logo"><a href="http://www.downloadplex.com" title="DownloadPlex.com Homepage"><span>DownloadPlex.com Homepage</span></a></h1>  -->
+<h1 class="logo"><img align="center" src="http://d39m4c4ri4rbd2.cloudfront.net/img/dplex.png"></h1>
 <div id="leftsearchpart">
   <div id="colormenu">               
   <span class="green"><a href="http://www.downloadplex.com/About-Us.html" title="About us">About</a></span><span class="green2"><a href="http://www.downloadplex.com/Site-Map.html" title="Site Map">Site Map</a></span><span class="red"><a href="http://www.downloadplex.com/Submit-Software.html" title="Submit Software">Submit</a></span><span class="yellow"><a href="http://www.downloadplex.com/Contact.html" title="Contact Us">Contact Us</a></span></div>   
@@ -138,27 +139,27 @@ googletag.enableServices();
 <ul class="megamenu level1">
 <li class="mega">
 <a href="http://www.downloadplex.com/Windows/Audio-Multimedia.html" class="mega" title="Audio &amp; Multimedia">
-<span class="menu-title">Audio &amp; Multimedia (14599)</span>
+<span class="menu-title">Audio &amp; Multimedia (14932)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Business.html" class="mega" title="Business">
-<span class="menu-title">Business (10509)</span>
+<span class="menu-title">Business (10706)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Communications.html" class="mega" title="Communications">
-<span class="menu-title">Communications (3023)</span>
+<span class="menu-title">Communications (3040)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Desktop.html" class="mega" title="Desktop">
-<span class="menu-title">Desktop (5109)</span>
+<span class="menu-title">Desktop (5528)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Development.html" class="mega" title="Development">
-<span class="menu-title">Development (6229)</span>
+<span class="menu-title">Development (6418)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Education.html" class="mega" title="Education">
-<span class="menu-title">Education (5375)</span>
+<span class="menu-title">Education (5627)</span>
 </a>
 </li>
 </ul></div>
@@ -176,27 +177,27 @@ googletag.enableServices();
 <ul class="megamenu level1">
 <li class="mega">
 <a href="http://www.downloadplex.com/Windows/Games-Entertainment.html" class="mega" title="Games &amp; Entertainment">
-<span class="menu-title">Games &amp; Entertainment (9061)</span>
+<span class="menu-title">Games &amp; Entertainment (9083)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Graphic-Apps.html" class="mega" title="Graphic Apps">
-<span class="menu-title">Graphic Apps (6654)</span>
+<span class="menu-title">Graphic Apps (6889)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Home-Hobby.html" class="mega" title="Home &amp; Hobby">
-<span class="menu-title">Home &amp; Hobby (3381)</span>
+<span class="menu-title">Home &amp; Hobby (3459)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Network-Internet.html" class="mega" title="Network &amp; Internet">
-<span class="menu-title">Network &amp; Internet (7435)</span>
+<span class="menu-title">Network &amp; Internet (7798)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Security-Privacy.html" class="mega" title="Security &amp; Privacy">
-<span class="menu-title">Security &amp; Privacy (4793)</span>
+<span class="menu-title">Security &amp; Privacy (4965)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Servers.html" class="mega" title="Servers">
-<span class="menu-title">Servers (1177)</span>
+<span class="menu-title">Servers (1310)</span>
 </a>
 </li>
 </ul></div>
@@ -214,15 +215,15 @@ googletag.enableServices();
 <ul class="megamenu level1">
 <li class="mega">
 <a href="http://www.downloadplex.com/Windows/System-Utilities.html" class="mega" title="System Utilities">
-<span class="menu-title">System Utilities (12269)</span>
+<span class="menu-title">System Utilities (12639)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Web-Development.html" class="mega" title="Web Development">
-<span class="menu-title">Web Development (2931)</span>
+<span class="menu-title">Web Development (2957)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Windows/Widgets.html" class="mega" title="Widgets">
-<span class="menu-title">Widgets (1590)</span>
+<span class="menu-title">Widgets (1603)</span>
 </a>
 </li>
 </ul></div>
@@ -448,7 +449,7 @@ googletag.enableServices();
 <ul class="megamenu level1">
 <li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Android.html" class="mega" title="Android">
-<span class="menu-title">Android (20789)</span>
+<span class="menu-title">Android (22083)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Bada.html" class="mega" title="Bada">
@@ -490,15 +491,15 @@ googletag.enableServices();
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Ipad.html" class="mega" title="Ipad">
-<span class="menu-title">Ipad (1794)</span>
+<span class="menu-title">Ipad (1807)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Iphone.html" class="mega" title="Iphone">
-<span class="menu-title">Iphone (9992)</span>
+<span class="menu-title">Iphone (10304)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Java.html" class="mega" title="Java">
-<span class="menu-title">Java (1217)</span>
+<span class="menu-title">Java (1218)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Mobile-Phone.html" class="mega" title="Mobile Phone">
@@ -528,7 +529,7 @@ googletag.enableServices();
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/RIM.html" class="mega" title="RIM">
-<span class="menu-title">RIM (4597)</span>
+<span class="menu-title">RIM (4633)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Security.html" class="mega" title="Security">
@@ -544,7 +545,7 @@ googletag.enableServices();
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mobile/Windows-Mobile.html" class="mega" title="Windows Mobile">
-<span class="menu-title">Windows Mobile (2490)</span>
+<span class="menu-title">Windows Mobile (2981)</span>
 </a>
 </li>
 </ul></div>
@@ -576,7 +577,7 @@ googletag.enableServices();
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mac/Audio-Video.html" class="mega" title="Audio &amp; Video">
-<span class="menu-title">Audio &amp; Video (4736)</span>
+<span class="menu-title">Audio &amp; Video (4737)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Mac/Business.html" class="mega" title="Business">
@@ -734,7 +735,7 @@ googletag.enableServices();
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Linux/Graphic-Apps.html" class="mega" title="Graphic Apps">
-<span class="menu-title">Graphic Apps (334)</span>
+<span class="menu-title">Graphic Apps (333)</span>
 </a>
 </li><li class="mega">
 <a href="http://www.downloadplex.com/Linux/Home-Hobby.html" class="mega" title="Home &amp; Hobby">
@@ -966,7 +967,7 @@ googletag.enableServices();
 	<!-- BEGIN: Data -->	
 	
 <div id="ja-breadcrumb">
-			<span class="breadcrumbs pathway"><a href="http://www.downloadplex.com" title="Downloadplex.com">Downloadplex.com</a> » Privacy Policy</span>
+			<span class="breadcrumbs pathway"><a href="http://www.downloadplex.com" title=""></a> » Privacy Policy</span>
 		</div>
     <h1 class="componentheading">
         Privacy Policy
@@ -1012,7 +1013,7 @@ googletag.enableServices();
 	This web site contains links to other sites. Please be aware that we Downloadplex, are not responsible for the privacy practices of such other sites. We encourage our users to be aware when they leave our site and to read the privacy statements of each and every web site that collects personally identifiable information. This privacy statement applies solely to information collected by this Web site. 
 	<p></p>
 	<a name="SubmissionPolicy" id="SubmissionPolicy"></a>
-	<h2>Downloadplex.com Submission Policy</h2>
+	<h2> Submission Policy</h2>
 	<h4>Important Notice</h4>
 <p>Any persisting efforts to deceive or mislead, including, but not limited to:</p>
 <ul>
@@ -1143,46 +1144,45 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1363701948212-1');
     	<div class="innercontainer">
    	    <div id="footer">                     
             <div class="footer_div">
-            	<h4>DownloadPlex Info</h4>
+            	<h4 title="DownloadPlex Info">DownloadPlex Info</h4>
             	<ul>
-                    <li><a href="http://www.downloadplex.com" title="Home">Home</a></li>
-                	<li><a href="http://www.downloadplex.com/About-Us.html" title="About Us">About Us</a></li>
-                	<li><a href="http://www.downloadplex.com/Faq.html" title="FAQ">FAQ</a></li>
-                	<li><a href="http://www.downloadplex.com/Help.html" title="Help">Help</a></li>
-                	<li><a href="http://www.downloadplex.com/Archive.html" title="DownloadPlex Archives">Archives</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com" title="Home">Home</a></li>
+                	<li><a rel="nofollow" href="http://www.downloadplex.com/About-Us.html" title="About Us">About Us</a></li>
+                	<li><a rel="nofollow" href="http://www.downloadplex.com/Faq.html" title="FAQ">FAQ</a></li>
+                	<li><a rel="nofollow" href="http://www.downloadplex.com/Help.html" title="Help">Help</a></li>
+                	<li><a rel="nofollow" href="http://www.downloadplex.com/Archive.html" title="DownloadPlex Archives">Archives</a></li>
                     <li><a href="http://www.downloadplex.com/Site-Map.html" title="Site Map">Site Map</a></li>
-                    <li> <a href="http://forum.downloadplex.com" title="DownloadPlex Forum">Forum</a></li>
-                    <li><a href="http://www.downloadplex.com/Contact.html" title="Contact">Contact</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Contact.html" title="Contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer_div">
                	<h4>Developers</h4>
                	<ul>
-                    <li><a href="http://www.downloadplex.com/Submit-Software.html" title="Submit Software">Submit Software</a></li>
-                   	<li><a href="http://www.downloadplex.com/Advertise.html" title="Advertise">Advertise</a></li>
-                    <li><a href="http://www.downloadplex.com/Link-To-Us.html" title="Link to us">Link to us</a></li>
-                    <li><a href="http://www.downloadplex.com/PAD-Info.html" title="PAD Info">PAD Info</a></li>
-                    <li><a href="http://www.downloadplex.com/Publishers/" title="Publisher List">Publisher List</a></li>                    
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Submit-Software.html" title="Submit Software">Submit Software</a></li>
+                   	<li><a rel="nofollow" href="http://www.downloadplex.com/Advertise.html" title="Advertise">Advertise</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Link-To-Us.html" title="Link to us">Link to us</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/PAD-Info.html" title="PAD Info">PAD Info</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Publishers/" title="Publisher List">Publisher List</a></li>                    
 			    </ul>
             </div>
             <div class="footer_div">
                	<h4>Members</h4>
                	<ul>
-                   	<li><a href="http://www.downloadplex.com/User-Panel.html" title="My Panel">My Panel</a></li>
-                   	<li><a href="http://www.downloadplex.com/Register-Form.html" title="Create an account">Create an account</a></li>
-                    <li><a href="http://www.downloadplex.com/Lost-Password-Form.html" title="Lost password?">Lost password?</a></li>
-                    <li><a href="http://www.downloadplex.com/Download-Premium.html" title="DownloadPlex.com Premium Download Service">Premium Download</a></li>                                        
+                   	<li><a rel="nofollow" href="http://www.downloadplex.com/User-Panel.html" title="My Panel">My Panel</a></li>
+                   	<li><a rel="nofollow" href="http://www.downloadplex.com/Register-Form.html" title="Create an account">Create an account</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Lost-Password-Form.html" title="Lost password?">Lost password?</a></li>
+                    <li><a rel="nofollow" href="http://www.downloadplex.com/Download-Premium.html" title="DownloadPlex.com Premium Download Service">Premium Download</a></li>                                        
 			    </ul>
             </div>
             <div class="footer_div">
                	<h4>Follow Us</h4>
                	<ul class="subscribe_icons">
-            <li><a href="http://www.facebook.com/pages/DownloadPlexcom/297532132412" class="subscribe_facebook" title="Become a fan!" target="_blank">Become a fan of DownloadPlex</a></li>
-            <li><a href="http://twitter.com/downloadplex" title="Follow me!" class="subscribe_twitter" target="_blank">Follow us @DownloadPlex</a></li>
-            <li><a href="https://plus.google.com/114961813443519972849/?prsrc=3" class="subscribe_plus" target="_blank">Join DownloadPlex on Google+!</a></li>
+            <li><a rel="nofollow" href="http://www.facebook.com/pages/DownloadPlexcom/297532132412" class="subscribe_facebook" title="Become a fan!" target="_blank">Become a fan of DownloadPlex</a></li>
+            <li><a rel="nofollow" href="http://twitter.com/downloadplex" title="Follow me!" class="subscribe_twitter" target="_blank">Follow us @DownloadPlex</a></li>
+            <li><a rel="nofollow" href="https://plus.google.com/114961813443519972849/?prsrc=3" class="subscribe_plus" target="_blank">Join DownloadPlex on Google+!</a></li>
             <li><a rel="external nofollow" href="http://www.addthis.com/feed.php?username=thanhh83&amp;h1=http%3A%2F%2Ffeeds2.feedburner.com%2Fdownloadplex&amp;t1=" onclick="return addthis_open(this, 'feed', 'http://feeds2.feedburner.com/downloadplex')" class="subscribe_rss" title="Subscribe using any feed reader!" target="_blank">Subscribe to our RSS feeds</a>
             </li>            
-			<li><a href="http://feedburner.google.com/fb/a/mailverify?uri=downloadplex&amp;loc=en_US" class="subscribe_email" title="Subscribe to this website via email" target="_blank">Subscribe to this website via email</a></li>
+			<li><a rel="nofollow" href="http://feedburner.google.com/fb/a/mailverify?uri=downloadplex&amp;loc=en_US" class="subscribe_email" title="Subscribe to this website via email" target="_blank">Subscribe to this website via email</a></li>
             
 			</ul>
             <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=thanhh83"></script>  
@@ -1192,7 +1192,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1363701948212-1');
     </div>
     <div id="botbarbg">
     	<div class="innercontainer">
-        	<div class="copy">Copyright © 2013 <a href="http://www.downloadplex.com/" title="Free Software Downloads, Over 120000 free to try software downloads on the Web" target="_parent">DownloadPlex.com</a> - Free Software Downloads include Windows, Drivers, Linux, Mac, Mobile. All Rights Reserved.</div>
+        	<div class="copy">Copyright © 2014 DownloadPlex.com  - Free Software Downloads include Windows, Drivers, Linux, Mac, Mobile. All Rights Reserved.</div>
         	<div class="powerby"><a href="http://www.downloadplex.com/Terms-of-Use.html" title="Terms of Use">Terms of Use</a> <a href="http://www.downloadplex.com/Privacy.html" title="Privacy Policy">Privacy Policy</a></div>
     	</div>
     </div>
