webmynd.com (archived on 2014-02-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business",
  "char_count": 18649,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.5,
  "homepage_snapshot_redirected_domain": "trigger.io",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140329122058id_/https://trigger.io/browser_extensions/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140328195459id_/http%3A//webmynd.com",
  "interval": "2014_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "trigger.io",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140215063201id_/https%3A//trigger.io/privacy",
  "policy_title": "Privacy Policy - Trigger",
  "policy_url": "trigger.io/privacy",
  "sha1": "5d75993df43ee6f92979ead9418e218dba7b2031",
  "simhash": 7548321560877763020,
  "simhash_updated": false,
  "site_hostname": "webmynd.com",
  "site_url": "http://webmynd.com",
  "smog": 17.28,
  "strict_updated": false,
  "timestamp": "20140215063201",
  "word_count": 3002,
  "year": 2014
}

--- a/w/we/web/webmynd.com.html
+++ b/w/we/web/webmynd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webmynd.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808180744id_/https%3A//trigger.io/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webmynd.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215063201id_/https%3A//trigger.io/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//cdn.optimizely.com/js/20753815.js"></script>
@@ -8,7 +8,9 @@
 		<meta name="description" content="Trigger Privacy Policy">
 		<meta name="keywords" content="">
 		<meta name="author" content="Trigger Corp">
+		
 		<meta name="robots" content="follow, index">
+		
 		<link rel="shortcut icon" href="/forge-static/favicon.ico">
 		<link rel="apple-touch-icon" href="/forge-static/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/forge-static/apple-touch-icon-72x72.png">
@@ -362,50 +364,49 @@
 
 
 		<img src="https://secure.adnxs.com/px?id=31185&amp;t=2" width="1" height="1" style="position: absolute; z-index:-1;">
+	
 		
-		
-		<footer class="main-footer">
-			<div class="container">
-				<div class="row-fluid">
-					<div class="span3">
-						<h2>Company</h2>
-						<ul class="unstyled">
-							<li><a href="/about/" title="About Trigger.io">About</a></li>
-							<li><a href="http://twitter.com/triggercorp" onclick="window.open('https://twitter.com/intent/follow?original_referer=http%3A%2F%2Fwww.trigger.io%2Fregistered&amp;region=follow&amp;screen_name=TriggerCorp&amp;source=followbutton&amp;variant=1.0','FollowTrigger','width=520,height=520');return false;" title="Follow Trigger on Twitter">Twitter</a></li>
-							<li><a href="http://www.facebook.com/triggercorp" target="_blank" title="Join Trigger on Facebook">Facebook</a></li>
-							<li><a href="http://stackoverflow.com/questions/tagged/trigger.io" target="_blank" title="Join Trigger on StackOverflow">StackOverflow</a></li>
-						</ul>
-					</div>
-					<div class="span3">
-						<h2>Platform</h2>
-						<ul class="unstyled">
-							<li><a href="http://trigger.io/cross-platform-application-development-blog">App Dev Blog</a></li>
-							<li><a href="/examples/">Examples</a></li>
-							<li><a href="/how-it-works/">How it works</a></li>
-							<li><a href="/pricing/">Pricing</a></li>
-						</ul>
-					</div>
-					<div class="span3">
-						<h2>Legal</h2>
-						<ul class="unstyled">
-							<li><a href="/tos/">Terms of service</a></li>
-							<li><a href="/license/">License agreement</a></li>
-							<li><a href="/privacy/">Privacy policy</a></li>
-						</ul>
-					</div>
-					<div class="span3">
-						<h2>Contact</h2>
-						<ul class="unstyled">
-							<li><a href="http://twitter.com/triggercorp" title="Contact Trigger on Twitter">@triggercorp</a></li>
-							<li><a href="mailto:support@trigger.io">support@trigger.io</a></li>
-							<li><a href="http://maps.google.com/maps?q=149+9th+Street,+San+Francisco,+CA&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=64.36916,97.382812&amp;vpsrc=0&amp;t=m&amp;z=17&amp;iwloc=A">149, 9th Street, San Francisco</a></li>
-						</ul>
-					</div>
-				</div>
+<footer class="main-footer">
+	<div class="container">
+		<div class="row-fluid">
+			<div class="span3">
+				<h2>Company</h2>
+				<ul class="unstyled">
+					<li><a href="/about/" title="About Trigger.io">About</a></li>
+					<li><a href="http://twitter.com/triggercorp" onclick="window.open('https://twitter.com/intent/follow?original_referer=http%3A%2F%2Fwww.trigger.io%2Fregistered&amp;region=follow&amp;screen_name=TriggerCorp&amp;source=followbutton&amp;variant=1.0','FollowTrigger','width=520,height=520');return false;" title="Follow Trigger on Twitter">Twitter</a></li>
+					<li><a href="http://www.facebook.com/triggercorp" target="_blank" title="Join Trigger on Facebook">Facebook</a></li>
+					<li><a href="http://stackoverflow.com/questions/tagged/trigger.io?sort=votes&amp;pagesize=50" target="_blank" title="Join Trigger on StackOverflow">StackOverflow</a></li>
+				</ul>
 			</div>
-		</footer>
-		
-		 <!-- embed -->
+			<div class="span3">
+				<h2>Platform</h2>
+				<ul class="unstyled">
+					<li><a href="http://trigger.io/cross-platform-application-development-blog">App Dev Blog</a></li>
+					<li><a href="/examples/">Examples</a></li>
+					<li><a href="/how-it-works/">How it works</a></li>
+					<li><a href="/pricing/">Pricing</a></li>
+				</ul>
+			</div>
+			<div class="span3">
+				<h2>Legal</h2>
+				<ul class="unstyled">
+					<li><a href="/tos/">Terms of service</a></li>
+					<li><a href="/license/">License agreement</a></li>
+					<li><a href="/privacy/">Privacy policy</a></li>
+				</ul>
+			</div>
+			<div class="span3">
+				<h2>Contact</h2>
+				<ul class="unstyled">
+					<li><a href="http://twitter.com/triggercorp" title="Contact Trigger on Twitter">@triggercorp</a></li>
+					<li><a href="mailto:support@trigger.io">support@trigger.io</a></li>
+					<li><a href="http://maps.google.com/maps?q=149+9th+Street,+San+Francisco,+CA&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=64.36916,97.382812&amp;vpsrc=0&amp;t=m&amp;z=17&amp;iwloc=A">325, 9th Street, San Francisco</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer>
+ <!-- embed -->
 		
 		
 
