xxxkinky.com (archived on 2014-02-16)
{
  "alexa_rank": 5704,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 7181,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.74,
  "homepage_snapshot_redirected_domain": "xxxkinky.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140331175707id_/http://www.xxxkinky.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140331175707id_/http%3A//xxxkinky.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "xxxkinky.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140216135504id_/http%3A//www.xxxkinky.com/static/privacy",
  "policy_title": "Privacy Policy - XXXKinky.com",
  "policy_url": "xxxkinky.com/static/privacy",
  "sha1": "4cea6947d6d50cd4d43e6cf8487227f09d95c7bb",
  "simhash": 16892027613696102676,
  "simhash_updated": false,
  "site_hostname": "xxxkinky.com",
  "site_url": "http://xxxkinky.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140216135504",
  "word_count": 1133,
  "year": 2014
}

--- a/x/xx/xxx/xxxkinky.com.html
+++ b/x/xx/xxx/xxxkinky.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xxxkinky.com privacy policy that was archived on 2013-08-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130807142250id_/http%3A//www.xxxkinky.com/static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xxxkinky.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216135504id_/http%3A//www.xxxkinky.com/static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>Privacy Policy - XXXKinky.com</title>
@@ -25,10 +25,12 @@
 	var lang_sending = "Sending...";
 	var lang_share_name_empty = "Please enter your name!";
 	var lang_share_rec_empty = "Please enter at least one recipient email!";
+	var pvx=pvx||{};
+	pvx.cc='US';
 </script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.livequery.pack.js"></script>
-    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.js"></script>
+    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.1.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.avs-0.2.js?v1.1.1"></script>
     	<script type="text/javascript" src="http://img.fastcdn.me/js/login.js?v1.1.8"></script>
 
@@ -211,10 +213,27 @@ src="http://c.statcounter.com/6247707/0/5ec92d77/1/"
 alt="joomla visitor" ></a></div></noscript>
 <!-- End of StatCounter Code -->
 
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=9188973; 
+var sc_invisible=1; 
+var sc_security="33ee53a6"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="website
+statistics" href="http://statcounter.com/free-web-stats/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9188973/0/33ee53a6/1/"
+alt="website statistics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
 
-<script type="text/javascript" src="http://img.fastcdn.me/js/pp.v1.0.7.js"></script>
-<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.1.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/pp.v1.0.8.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.6.js"></script>
 <script type="text/javascript">
 function getCookie(c) {
 	var cookies=document.cookie.split(';');
@@ -230,7 +249,8 @@ function getCookie(c) {
 
 </script>
 
-<script type="text/javascript" src="http://st2.xxxkinky.com/js/inx.js"></script>
+<script type="text/javascript" src="http://st2.xxxkinky.com/js/snpp.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/snpp/snpp.v.1.0.10.js"></script>
 
 <script type="text/javascript" src="http://admez.com/ads/xxxkinky.js"></script>
 
