hdcarwallpapers.com (archived on 2014-02-19)
{
  "alexa_rank": 101362,
  "analysis_subcorpus": true,
  "categories": "vehicles",
  "char_count": 4190,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.97,
  "homepage_snapshot_redirected_domain": "hdcarwallpapers.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140417012951id_/http://www.hdcarwallpapers.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140417012951id_/http%3A//hdcarwallpapers.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hdcarwallpapers.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140219032321id_/http%3A//www.hdcarwallpapers.com/privacy.html",
  "policy_title": "Privacy Policy - HD Car Wallpapers",
  "policy_url": "hdcarwallpapers.com/privacy.html",
  "sha1": "c414a66f6566b23cf8b68d2744d7ecfe096c1b59",
  "simhash": 16580455664270834641,
  "simhash_updated": false,
  "site_hostname": "hdcarwallpapers.com",
  "site_url": "http://hdcarwallpapers.com",
  "smog": 14.07,
  "strict_updated": false,
  "timestamp": "20140219032321",
  "word_count": 673,
  "year": 2014
}

--- a/h/hd/hdc/hdcarwallpapers.com.html
+++ b/h/hd/hdc/hdcarwallpapers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hdcarwallpapers.com privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820165222id_/http%3A//www.hdcarwallpapers.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hdcarwallpapers.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219032321id_/http%3A//www.hdcarwallpapers.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,7 +15,7 @@
 <link rel="alternate" href="/rss" type="application/rss+xml" title="Car Wallpapers | Latest Cars Images Photos in HD Desktop Resolutions RSS" id="gallery">
 <meta name="y_key" content="6176475774022b47">
 <link rel="shortcut icon" href="/favicon.ico">
-<link rel="stylesheet" href="/templates/hdcars/style2.css" type="text/css">
+<link rel="stylesheet" href="/templates/hdcars/style.css" type="text/css">
 <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" src="/js/jquery.js"></script>
 <script type="text/javascript">
   jQuery.noConflict();
@@ -55,7 +55,7 @@
 <li><a href="http://www.hdcarwallpapers.com/tag-cloud.html" rel="nofollow"><span>Tag Cloud</span></a></li>
 <li><a href="http://www.hdcarwallpapers.com/contact.html" class="last" title="Contact hdwallpapers.in"><span>Contact</span></a></li>
 
-<li class="back" style="left: 40px; width: 59px;"><div class="left"></div></li></ul></div>
+<li class="back" style="left: 25px; width: 930px;"><div class="left"></div></li></ul></div>
     
 <div class="top-menu-ads">
 <script type="text/javascript"><!--
@@ -69,10 +69,8 @@ google_ad_height = 15;
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div style="float: right" ;=""><!-- AddThis Button BEGIN --><a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=sahithp"><img src="http://s7.addthis.com/static/btn/lg-bookmark-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=sahithp"></script><!-- AddThis Button END --></div>
-</div></div>
-            <div class="content_background"> 
-
-<div style="float:left;">
+</div></div>			
+<div style="float:left;margin:0 0 5px 10px;">
 <div class="newsletter">
 <form action="http://feedburner.google.com/fb/a/mailverify" method="POST" target="popupwindow" onsubmit="window.open('http://feedburner.google.com/fb/a/mailverify?uri=hdcarwallpapers', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true">
 
@@ -99,6 +97,8 @@ google_ad_height = 90;
 
 </div>
 <br clear="all">
+
+            <div class="content_background"> 
 <div id="left_container">
 <div class="left-panel">
 <div class="left_panel_top"><div class="spacer">    
@@ -328,7 +328,7 @@ function searchSubmit(obj)
 
 </ul><span class="stat-image"></span> <div class="side-header">statistics</div>
 <ul class="side-panel">
-    <li>Total Wallpapers: <strong>3595</strong></li>
+    <li>Total Wallpapers: <strong>4015</strong></li>
     <li>Total Categories: <strong>69</strong></li>
 <script type="text/javascript" src="http://widgets.amung.us/small.js"></script><script type="text/javascript">WAU_small('rfc0cqnoii8u')</script>
 </ul></div></div></div><div class="left_panel_bottom"></div>
